Bug 327856 - Google Calendar resource doesn't respect timezones
Summary: Google Calendar resource doesn't respect timezones
Status: RESOLVED FIXED
Alias: None
Product: libkgapi
Classification: Frameworks and Libraries
Component: calendar (other bugs)
Version First Reported In: 2.0.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Daniel Vrátil
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-20 09:26 UTC by Marius Orcsik
Modified: 2013-12-04 15:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0.2
Sentry Crash Report:


Attachments
Google calendar screenshot with the GMT+9 calendar showing at the correct local time GMT+3. (55.69 KB, image/png)
2013-11-20 09:31 UTC, Marius Orcsik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marius Orcsik 2013-11-20 09:26:45 UTC
Using a calendar from a different timezone (the example is GMT+9, Korea) the events shown in KOrganizer are being displayed at the wrong hour (the Korea local time) instead of my local time (GMT+3).


Reproducible: Always

Steps to Reproduce:
1. Add  http://www.gomtv.net/schedule/popGoogleCal.gom in google calendar.
2. Add it to the akonadi google calendar resource.
3. View in KOrganizer
Actual Results:  
When displaying the events, they will show Korea local time instead of being converted to the user's local time.

Expected Results:  
The events should be displayed in the user's local time, see the screenshot.
Comment 1 Marius Orcsik 2013-11-20 09:31:48 UTC
Created attachment 83650 [details]
Google calendar screenshot with the GMT+9 calendar showing at the correct local time GMT+3.
Comment 2 Daniel Vrátil 2013-12-04 15:14:26 UTC
Git commit 5ca295d954d914f49524a69793d380aa14be5376 by Dan Vrátil.
Committed on 04/12/2013 at 15:12.
Pushed by dvratil into branch 'LibKGAPI/2.0'.

Respect calendar-wide timezones

Each listEvents reply contains timeZone field in header that specifies
a calendar-wide timezone that applies to all events, but was ignored by
parseEventJSONFeed(). The timeZone is now passed to JSONToEvent(), which
will first check for timezone override in "start" and "end" fields
and then apply the global timezone.
FIXED-IN: 2.0.2

M  +29   -11   libkgapi2/calendar/calendarservice.cpp
A  +0    -0    libkgapi2/music/CMakeLists.txt

http://commits.kde.org/akonadi-google/5ca295d954d914f49524a69793d380aa14be5376