Respect calendar-wide timezones

Each listEvents reply contains timeZone field in header that specifies
a calendar-wide timezone that applies to all events, but was ignored by
parseEventJSONFeed(). The timeZone is now passed to JSONToEvent(), which
will first check for timezone override in "start" and "end" fields
and then apply the global timezone.

BUG: 327856
FIXED-IN: 2.0.2